--- a/js/Components/Chart/style.scss
+++ b/js/Components/Chart/style.scss
@@ -1,4 +1,11 @@
 .chart-component {
     height: 500px;
     width: 100%;
+
+    .recharts-responsive-container {
+        margin: 22px;
+        width: 95% !important;
+        height: 83% !important;
+        background-color: #fff;
+    }
 }
